Fix centered article images on mobile

--- a/_sass/components/_article.scss
+++ b/_sass/components/_article.scss
@@ -45,6 +45,10 @@ article img.image--centered {
   margin-left: auto;
   margin-right: auto;
   width: auto;
+
+  @include m-mobile {
+    width: 100%;
+  }
 }
 
 
